--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,28 +5,18 @@ on:
   pull_request:
 
 jobs:
-  test:
-    runs-on: ubuntu-22.04
+  build:
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup ROS 2
-        uses: ros-tooling/setup-ros@v0.7
+      - uses: ros-tooling/setup-ros@v0.7
         with:
-          ros-distro: humble
-
-      - name: Install dependencies
-        run: |
-          sudo apt update
-          sudo apt install -y python3-colcon-common-extensions
+          required-ros-distributions: humble
 
       - name: Build
         run: |
+          source /opt/ros/humble/setup.bash
           colcon build
-
-      - name: Test
-        run: |
-          colcon test
-          colcon test-result --verbose
 
