Fix CI: add apt update

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,9 @@ jobs:
         with:
           required-ros-distributions: humble
 
+      - name: Update apt
+        run: sudo apt update
+
       - name: Build
         run: |
           source /opt/ros/humble/setup.bash
