Fix package.xml metadata and refine README

--- a/package.xml
+++ b/package.xml
@@ -2,10 +2,17 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>ros2_sysmon</name>
-  <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="s24C1001pu@s.chibakoudai.jp">takuto</maintainer>
-  <license>TODO: License declaration</license>
+  <version>0.1.0</version>
+
+  <description>
+    ROS 2 上で動作するシンプルなシステムモニタノードです。
+    CPU 使用率やメモリ使用率，ディスク使用率を取得し，
+    diagnostic_msgs として定期的に publish します。
+  </description>
+
+  <maintainer email="s24C1001pu@s.chibakoudai.jp">Takuto</maintainer>
+
+  <license>BSD-3-Clause</license>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
@@ -16,3 +23,4 @@
     <build_type>ament_python</build_type>
   </export>
 </package>
+
